割り込み処理でノートオンが連打されてしまっていたのを修正

--- a/drv/nesa.cfg
+++ b/drv/nesa.cfg
@@ -9,11 +9,11 @@ MEMORY {
     # - code
     # - rodata
     # - data (load)
-    ROM0:       start = $8000, size = $0dd0, file = %O ,fill = yes, define = yes;
+    ROM0:       start = $8000, size = $0de0, file = %O ,fill = yes, define = yes;
 
 	#// 8k ROM Banks
 	#// - Music data
-    ROMD:       start = $8dd0, size = $3230, file = %O ,fill = yes, define = yes;
+    ROMD:       start = $8de0, size = $3220, file = %O ,fill = yes, define = yes;
 
 	#//  8k ROM Banks
 	#// - DPCM data
