バージョン更新

--- a/DrvFAMICompiler/DrvFAMICompiler.vcxproj.filters
+++ b/DrvFAMICompiler/DrvFAMICompiler.vcxproj.filters
@@ -72,4 +72,7 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\Readme.txt" />
+  </ItemGroup>
 </Project>
