--- a/DrvFAMICompiler/DrvFAMICompiler.vcxproj
+++ b/DrvFAMICompiler/DrvFAMICompiler.vcxproj
@@ -166,6 +166,9 @@
     <ClInclude Include="TrackData.h" />
     <ClInclude Include="Utils.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\Readme.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
