--- a/drv/nsf.cfg
+++ b/drv/nsf.cfg
@@ -9,11 +9,11 @@ MEMORY {
     # - code
     # - rodata
     # - data (load)
-    ROM0:       start = $8000, size = $0df0, file = %O ,fill = yes, define = yes;
+    ROM0:       start = $8000, size = $0e00, file = %O ,fill = yes, define = yes;
 
 	#// 8k ROM Banks
 	#// - Music data
-    ROMD:       start = $8df0, size = $3210, file = %O ,fill = yes, define = yes;
+    ROMD:       start = $8e00, size = $3200, file = %O ,fill = yes, define = yes;
 
 	#//  8k ROM Banks
 	#// - DPCM data
