--- a/drv/nsf.cfg
+++ b/drv/nsf.cfg
@@ -9,11 +9,17 @@ MEMORY {
     # - code
     # - rodata
     # - data (load)
-    ROM0:       start = $8000, size = $0e00, file = %O ,fill = yes, define = yes;
+    # 2A03
+    #ROM0:       start = $8000, size = $0e00, file = %O ,fill = yes, define = yes;
+    # MMC5
+    ROM0:       start = $8000, size = $0e70, file = %O ,fill = yes, define = yes;
 
 	#// 8k ROM Banks
 	#// - Music data
-    ROMD:       start = $8e00, size = $3200, file = %O ,fill = yes, define = yes;
+    # 2A03
+    #ROMD:       start = $8e00, size = $3200, file = %O ,fill = yes, define = yes;
+    # MMC5
+    ROMD:       start = $8e70, size = $3190, file = %O ,fill = yes, define = yes;
 
 	#//  8k ROM Banks
 	#// - DPCM data
