--- a/drv/nsf.cfg
+++ b/drv/nsf.cfg
@@ -10,16 +10,16 @@ MEMORY {
     # - rodata
     # - data (load)
     # 2A03
-    #ROM0:       start = $8000, size = $0e00, file = %O ,fill = yes, define = yes;
+    ROM0:       start = $8000, size = $0d60, file = %O ,fill = yes, define = yes;
     # MMC5
-    ROM0:       start = $8000, size = $0e70, file = %O ,fill = yes, define = yes;
+    #ROM0:       start = $8000, size = $0dd0, file = %O ,fill = yes, define = yes;
 
 	#// 8k ROM Banks
 	#// - Music data
     # 2A03
-    #ROMD:       start = $8e00, size = $3200, file = %O ,fill = yes, define = yes;
+    ROMD:       start = $8d60, size = $32a0, file = %O ,fill = yes, define = yes;
     # MMC5
-    ROMD:       start = $8e70, size = $3190, file = %O ,fill = yes, define = yes;
+    #ROMD:       start = $8dd0, size = $3230, file = %O ,fill = yes, define = yes;
 
 	#//  8k ROM Banks
 	#// - DPCM data
