--- a/drv/nesa.cfg
+++ b/drv/nesa.cfg
@@ -9,11 +9,11 @@ MEMORY {
     # - code
     # - rodata
     # - data (load)
-    ROM0:       start = $8000, size = $0e00, file = %O ,fill = yes, define = yes;
+    ROM0:       start = $8000, size = $1670, file = %O ,fill = yes, define = yes;
 
 	#// 8k ROM Banks
 	#// - Music data
-    ROMD:       start = $8e00, size = $3200, file = %O ,fill = yes, define = yes;
+    ROMD:       start = $9670, size = $2990, file = %O ,fill = yes, define = yes;
 
 	#//  8k ROM Banks
 	#// - DPCM data
@@ -23,7 +23,7 @@ MEMORY {
     ROMV:       start = $fffa, size = $0006, file = %O, fill = yes;
 
     # 1 8k CHR Bank
-#    ROM2:       start = $0000, size = $2000, file = %O, fill = yes;
+    ROM2:       start = $0000, size = $2000, file = %O, fill = yes;
 
     # standard 2k SRAM (-zeropage)
     # $0100-$0200 cpu stack
@@ -46,7 +46,7 @@ SEGMENTS {
     RODATA:     load = ROM0,            type = ro,  define = yes;
 #   DATA:       load = ROM0, run = RAM, type = rw,  define = yes;
     VECTORS:    load = ROMV,            type = rw;
-#    CHARS:      load = ROM2,            type = rw;
+    CHARS:      load = ROM2,            type = rw;
     BSS:        load = RAM,             type = bss, define = yes;
     ZEROPAGE:   load = ZP,              type = zp;
 }
