--- a/drv/nsf.cfg
+++ b/drv/nsf.cfg
@@ -10,23 +10,27 @@ MEMORY {
     # - rodata
     # - data (load)
     # 2A03
-    ROM0:       start = $8000, size = $0d60, file = %O ,fill = yes, define = yes;
+    #ROM0:       start = $8000, size = $0d60, file = %O ,fill = yes, define = yes;
+    # VRC6
+    ROM0:       start = $8000, size = $0df0, file = %O ,fill = yes, define = yes;
     # MMC5
     #ROM0:       start = $8000, size = $0dd0, file = %O ,fill = yes, define = yes;
 
 	#// 8k ROM Banks
 	#// - Music data
     # 2A03
-    ROMD:       start = $8d60, size = $32a0, file = %O ,fill = yes, define = yes;
+    #ROMD:       start = $8d60, size = $32a0, file = %O ,fill = yes, define = yes;
+    # VRC6
+    ROMD:       start = $8df0, size = $3210, file = %O ,fill = yes, define = yes;
     # MMC5
     #ROMD:       start = $8dd0, size = $3230, file = %O ,fill = yes, define = yes;
 
 	#//  8k ROM Banks
 	#// - DPCM data
-	ROMP:       start = $c000, size = $3ffa, file = %O ,fill = yes, define = yes;
+	ROMP:       start = $c000, size = $4000, file = %O ,fill = yes, define = yes;
 
     # Hardware Vectors at End of 2nd 8K ROM
-    ROMV:       start = $fffa, size = $0006, file = %O, fill = yes;
+#    ROMV:       start = $fffa, size = $0006, file = %O, fill = yes;
 
     # 1 8k CHR Bank
 #    ROM2:       start = $0000, size = $2000, file = %O, fill = yes;
@@ -51,7 +55,7 @@ SEGMENTS {
     CODE:       load = ROM0,            type = ro,  define = yes;
     RODATA:     load = ROM0,            type = ro,  define = yes;
 #   DATA:       load = ROM0, run = RAM, type = rw,  define = yes;
-    VECTORS:    load = ROMV,            type = rw;
+#    VECTORS:    load = ROMV,            type = rw;
 #    CHARS:      load = ROM2,            type = rw;
     BSS:        load = RAM,             type = bss, define = yes;
     ZEROPAGE:   load = ZP,              type = zp;
