レジスタ値から音階が正常に逆引きできていなかったのを修正

--- a/drv/nsf.cfg
+++ b/drv/nsf.cfg
@@ -10,20 +10,20 @@ MEMORY {
     # - rodata
     # - data (load)
     # 2A03
-    #ROM0:       start = $8000, size = $0d60, file = %O ,fill = yes, define = yes;
+    ROM0:       start = $8000, size = $0cd0, file = %O ,fill = yes, define = yes;
     # VRC6
-    ROM0:       start = $8000, size = $0df0, file = %O ,fill = yes, define = yes;
+    #ROM0:       start = $8000, size = $0d60, file = %O ,fill = yes, define = yes;
     # MMC5
-    #ROM0:       start = $8000, size = $0dd0, file = %O ,fill = yes, define = yes;
+    #ROM0:       start = $8000, size = $0d40, file = %O ,fill = yes, define = yes;
 
 	#// 8k ROM Banks
 	#// - Music data
     # 2A03
-    #ROMD:       start = $8d60, size = $32a0, file = %O ,fill = yes, define = yes;
+    ROMD:       start = $8cd0, size = $33f0, file = %O ,fill = yes, define = yes;
     # VRC6
-    ROMD:       start = $8df0, size = $3210, file = %O ,fill = yes, define = yes;
+    #ROMD:       start = $8d60, size = $32a0, file = %O ,fill = yes, define = yes;
     # MMC5
-    #ROMD:       start = $8dd0, size = $3230, file = %O ,fill = yes, define = yes;
+    #ROMD:       start = $8d40, size = $32c0, file = %O ,fill = yes, define = yes;
 
 	#//  8k ROM Banks
 	#// - DPCM data
