--- a/drv/nesa.cfg
+++ b/drv/nesa.cfg
@@ -9,11 +9,13 @@ MEMORY {
     # - code
     # - rodata
     # - data (load)
-    ROM0:       start = $8000, size = $1670, file = %O ,fill = yes, define = yes;
+    ROM0:       start = $8000, size = $16b0, file = %O ,fill = yes, define = yes;
+    #ROM0:       start = $8000, size = $2000, file = %O ,fill = yes, define = yes;
 
 	#// 8k ROM Banks
 	#// - Music data
-    ROMD:       start = $9670, size = $2990, file = %O ,fill = yes, define = yes;
+    ROMD:       start = $96b0, size = $2950, file = %O ,fill = yes, define = yes;
+    #ROMD:       start = $a000, size = $2000, file = %O ,fill = yes, define = yes;
 
 	#//  8k ROM Banks
 	#// - DPCM data
