4bit以上の音量に対応

--- a/drv/nesa.cfg
+++ b/drv/nesa.cfg
@@ -9,12 +9,12 @@ MEMORY {
     # - code
     # - rodata
     # - data (load)
-    ROM0:       start = $8000, size = $16b0, file = %O ,fill = yes, define = yes;
+    ROM0:       start = $8000, size = $16d0, file = %O ,fill = yes, define = yes;
     #ROM0:       start = $8000, size = $2000, file = %O ,fill = yes, define = yes;
 
 	#// 8k ROM Banks
 	#// - Music data
-    ROMD:       start = $96b0, size = $2950, file = %O ,fill = yes, define = yes;
+    ROMD:       start = $96d0, size = $2930, file = %O ,fill = yes, define = yes;
     #ROMD:       start = $a000, size = $2000, file = %O ,fill = yes, define = yes;
 
 	#//  8k ROM Banks
