--- a/drv/nsf.cfg
+++ b/drv/nsf.cfg
@@ -2,38 +2,31 @@ MEMORY {
     ZP:         start = $0000, size = $0100, type = rw, define = yes;
 
     # NSF Header
-    HEADER:     start = $0000, size = $0080, file = %O, fill = yes;
+    HEADER:     start = $0000, size = $0080, file = "", fill = yes;
+
+    # init code
+    ROMS:       start = $8000, size = $004a, file = %O, fill = yes, define = yes;
 
     # 2 16K ROM Banks
     # - startup
     # - code
     # - rodata
     # - data (load)
-    # 2A03
-    #ROM0:       start = $8000, size = $0cf0, file = %O ,fill = yes, define = yes;
-    # VRC6
-    #ROM0:       start = $8000, size = $0d80, file = %O ,fill = yes, define = yes;
-    # MMC5
-    ROM0:       start = $8000, size = $0d60, file = %O ,fill = yes, define = yes;
+    ROM0:       start = $804a, size = $3fb6, file = %O, fill = no, define = yes;
 
 	#// 8k ROM Banks
 	#// - Music data
-    # 2A03
-    #ROMD:       start = $8cf0, size = $33e0, file = %O ,fill = yes, define = yes;
-    # VRC6
-    #ROMD:       start = $8d80, size = $3280, file = %O ,fill = yes, define = yes;
-    # MMC5
-    ROMD:       start = $8d60, size = $32a0, file = %O ,fill = yes, define = yes;
+    #ROMD:       start = $9000, size = $3000, file = "", fill = yes, define = yes;
 
 	#//  8k ROM Banks
 	#// - DPCM data
-	ROMP:       start = $c000, size = $4000, file = %O ,fill = yes, define = yes;
+	ROMP:       start = $c000, size = $4000, file = "", fill = yes, define = yes;
 
     # Hardware Vectors at End of 2nd 8K ROM
-#    ROMV:       start = $fffa, size = $0006, file = %O, fill = yes;
+#    ROMV:       start = $fffa, size = $0006, file = "", fill = yes;
 
     # 1 8k CHR Bank
-#    ROM2:       start = $0000, size = $2000, file = %O, fill = yes;
+#    ROM2:       start = $0000, size = $2000, file = "", fill = yes;
 
     # standard 2k SRAM (-zeropage)
     # $0100-$0200 cpu stack
@@ -47,13 +40,14 @@ MEMORY {
 
 SEGMENTS {
     HEADER:     load = HEADER,          type = ro;
-    MUSDATA:    load = ROMD,            type = ro,  define = yes;
-    PCMDATA:    load = ROMP,            type = ro,  define = yes;
-    STARTUP:    load = ROM0,            type = ro,  define = yes;
-    LOWCODE:    load = ROM0,            type = ro,                optional = yes;
-    INIT:       load = ROM0,            type = ro,  define = yes, optional = yes;
+    STARTUP:    load = ROMS,            type = ro,  define = yes;
+    LOWCODE:    load = ROMS,            type = ro,                optional = yes;
+    INIT:       load = ROMS,            type = ro,  define = yes, optional = yes;
+    MAIN:       load = ROMS,            type = ro,  define = yes;
     CODE:       load = ROM0,            type = ro,  define = yes;
     RODATA:     load = ROM0,            type = ro,  define = yes;
+    MUSDATA:    load = ROM0,            type = ro,  define = yes;
+    PCMDATA:    load = ROMP,            type = ro,  define = yes;
 #   DATA:       load = ROM0, run = RAM, type = rw,  define = yes;
 #    VECTORS:    load = ROMV,            type = rw;
 #    CHARS:      load = ROM2,            type = rw;
