--- a/DrvFAMICompiler/DrvFAMICompiler.vcxproj
+++ b/DrvFAMICompiler/DrvFAMICompiler.vcxproj
@@ -168,6 +168,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\Readme.txt" />
+    <Text Include="..\説明書.txt" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="drvfamic.rc" />
