--- a/DrvFAMICompiler/DrvFAMICompiler.vcxproj.filters
+++ b/DrvFAMICompiler/DrvFAMICompiler.vcxproj.filters
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\Readme.txt" />
+    <Text Include="..\説明書.txt" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="drvfamic.rc">
